--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,9 @@
     <%= link_to 'Sign In',  new_user_session_path, class: "nav-item nav-link"  %>
     <%= link_to 'Sign Up',  new_user_registration_path, class: "nav-item nav-link" %>
     <%= link_to 'Sign Out', destroy_user_session_path,  method: :delete, class:"nav-item nav-link" %>
+    
      <% if user_signed_in? %>
+    <%= link_to 'My profile',  profile_path, class: "nav-item nav-link" %>
      <span class="nav-item nav-link"><%= current_user.username%></span> 
      <% end %>
     </div>
