--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -20,7 +20,7 @@
       <% if image.user != current_user && image.private == true%>
       <%else%>
         <div class="col-md-3 card">
-        <%= image_tag "data:image/#{image.extension};base64,#{image.stream}", class:"flexible"%>
+        <%= link_to image_tag("data:image/#{image.extension};base64,#{image.stream}", class:"flexible"), image_path(image) %>
           <div class="card-body">
             <p class="card-text"><%=image.description%></p>
           </div>
